Try and fix whitespace issues on messages

--- a/src/Korobi/WebBundle/Resources/assets/sass/korobi/irc/_logs.scss
+++ b/src/Korobi/WebBundle/Resources/assets/sass/korobi/irc/_logs.scss
@@ -42,6 +42,7 @@
       word-break: break-all;
       padding-right: 0;
       padding-left: 10px;
+      white-space: pre;
 
       .underline { text-decoration: underline; }
       .italic    { font-style: italic; }
